BUG - font-size too small on high res screens

--- a/css/global/_global.scss
+++ b/css/global/_global.scss
@@ -1,11 +1,15 @@
 html {
 	font-size: 18px;
 	@media (min-width: 768px) {
-		font-size: between(20px, 18px, 768px, $max-width);
+		font-size: between(30px, 18px, 768px, $max-width);
 	}
 	@media (min-width: $max-width) {
 		font-size: 20px;
 	}
+	@media (min-width: 1920px) {
+		font-size: 24px;
+	}
+	
 	-webkit-overflow-scrolling: touch;
 
 	* {
